--- a/public/index.html
+++ b/public/index.html
@@ -490,9 +490,273 @@
 
     #send:disabled { opacity: 0.5; cursor: not-allowed; }
     #send:active:not(:disabled) { transform: scale(0.95); }
+
+    /* Settings button */
+    #settings-btn {
+      width: 36px;
+      height: 36px;
+      border-radius: 8px;
+      background: transparent;
+      border: 1px solid var(--border);
+      color: var(--text);
+      font-size: 18px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+    }
+
+    /* Sprites Modal */
+    #sprites-modal {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.7);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 200;
+      padding: 20px;
+      padding-top: calc(20px + var(--safe-top));
+      padding-bottom: calc(20px + var(--safe-bottom));
+    }
+
+    #sprites-modal.open {
+      display: flex;
+    }
+
+    .modal-content {
+      background: var(--bg-secondary);
+      border-radius: 16px;
+      width: 100%;
+      max-width: 400px;
+      max-height: 80vh;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+
+    .modal-header {
+      padding: 16px;
+      border-bottom: 1px solid var(--border);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .modal-header h2 {
+      font-size: 17px;
+      font-weight: 600;
+    }
+
+    .modal-close {
+      width: 32px;
+      height: 32px;
+      border-radius: 8px;
+      background: var(--bg-tertiary);
+      border: none;
+      color: var(--text);
+      font-size: 20px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .modal-body {
+      flex: 1;
+      overflow-y: auto;
+      padding: 16px;
+    }
+
+    /* Sprites list */
+    .sprites-list {
+      margin-bottom: 16px;
+    }
+
+    .sprite-item {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 12px;
+      background: var(--bg-tertiary);
+      border-radius: 10px;
+      margin-bottom: 8px;
+      cursor: pointer;
+      transition: background 0.15s;
+    }
+
+    .sprite-item:active {
+      background: var(--bg);
+    }
+
+    .sprite-item.current {
+      border: 2px solid var(--accent);
+    }
+
+    .sprite-info {
+      flex: 1;
+      min-width: 0;
+    }
+
+    .sprite-name {
+      font-weight: 500;
+      margin-bottom: 2px;
+    }
+
+    .sprite-address {
+      font-size: 13px;
+      color: var(--text-muted);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .sprite-delete {
+      width: 28px;
+      height: 28px;
+      border: none;
+      background: var(--bg);
+      color: var(--text-muted);
+      cursor: pointer;
+      border-radius: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 16px;
+      flex-shrink: 0;
+    }
+
+    .sprite-delete:active {
+      background: #ef4444;
+      color: white;
+    }
+
+    .sprite-current-badge {
+      font-size: 11px;
+      color: var(--accent);
+      background: rgba(212, 165, 116, 0.15);
+      padding: 2px 6px;
+      border-radius: 4px;
+    }
+
+    /* Add sprite form */
+    .add-sprite-form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .add-sprite-form input {
+      padding: 12px 14px;
+      background: var(--input-bg);
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      color: var(--text);
+      font-size: 15px;
+      outline: none;
+    }
+
+    .add-sprite-form input:focus {
+      border-color: var(--accent);
+    }
+
+    .add-sprite-form input::placeholder {
+      color: var(--text-muted);
+    }
+
+    .add-sprite-btn {
+      padding: 12px;
+      background: var(--accent);
+      color: #1a1a1a;
+      border: none;
+      border-radius: 10px;
+      font-size: 15px;
+      font-weight: 500;
+      cursor: pointer;
+    }
+
+    .add-sprite-btn:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+
+    .sprites-empty {
+      text-align: center;
+      color: var(--text-muted);
+      padding: 20px;
+      font-size: 14px;
+    }
+
+    /* Pull to refresh */
+    #pull-indicator {
+      position: fixed;
+      top: var(--safe-top);
+      left: 50%;
+      transform: translateX(-50%) translateY(-60px);
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: var(--bg-secondary);
+      border: 1px solid var(--border);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 150;
+      transition: transform 0.2s ease, opacity 0.2s ease;
+      opacity: 0;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+    }
+
+    #pull-indicator.visible {
+      opacity: 1;
+    }
+
+    #pull-indicator.refreshing {
+      transform: translateX(-50%) translateY(20px);
+      opacity: 1;
+    }
+
+    #pull-indicator .pull-arrow {
+      width: 20px;
+      height: 20px;
+      stroke: var(--accent);
+      transition: transform 0.2s ease;
+    }
+
+    #pull-indicator.ready .pull-arrow {
+      transform: rotate(180deg);
+    }
+
+    #pull-indicator .pull-spinner {
+      width: 20px;
+      height: 20px;
+      border: 2px solid var(--border);
+      border-top-color: var(--accent);
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+      display: none;
+    }
+
+    #pull-indicator.refreshing .pull-arrow {
+      display: none;
+    }
+
+    #pull-indicator.refreshing .pull-spinner {
+      display: block;
+    }
   </style>
 </head>
 <body>
+  <!-- Pull to refresh indicator -->
+  <div id="pull-indicator">
+    <svg class="pull-arrow" viewBox="0 0 24 24" fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="12" y1="5" x2="12" y2="19"></line>
+      <polyline points="19 12 12 19 5 12"></polyline>
+    </svg>
+    <div class="pull-spinner"></div>
+  </div>
+
   <div id="app">
     <!-- Sidebar -->
     <div id="sidebar">
@@ -511,6 +775,7 @@
         <button id="menu-btn">☰</button>
         <h1 id="chat-title">Sprite Code</h1>
         <div id="status">Disconnected</div>
+        <button id="settings-btn" title="Manage Sprites">⚙</button>
       </header>
 
       <div id="empty-state">
@@ -535,6 +800,24 @@
     </div>
   </div>
 
+  <!-- Sprites Modal -->
+  <div id="sprites-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2>Manage Sprites</h2>
+        <button class="modal-close" id="close-sprites-modal">×</button>
+      </div>
+      <div class="modal-body">
+        <div class="sprites-list" id="sprites-list"></div>
+        <div class="add-sprite-form">
+          <input type="text" id="sprite-name-input" placeholder="Sprite name (e.g., Work Sprite)">
+          <input type="text" id="sprite-address-input" placeholder="Tailscale IP (e.g., 100.64.1.2)">
+          <button class="add-sprite-btn" id="add-sprite-btn">Add Sprite</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/12.0.0/marked.min.js"></script>
   <script>
@@ -552,6 +835,14 @@
     const inputEl = document.getElementById('input');
     const sendBtn = document.getElementById('send');
     const statusEl = document.getElementById('status');
+    const settingsBtn = document.getElementById('settings-btn');
+    const spritesModal = document.getElementById('sprites-modal');
+    const closeSpritesModal = document.getElementById('close-sprites-modal');
+    const spritesList = document.getElementById('sprites-list');
+    const spriteNameInput = document.getElementById('sprite-name-input');
+    const spriteAddressInput = document.getElementById('sprite-address-input');
+    const addSpriteBtn = document.getElementById('add-sprite-btn');
+    const pullIndicator = document.getElementById('pull-indicator');
 
     // State
     let sessions = [];
@@ -559,6 +850,7 @@
     let ws = null;
     let currentAssistantMessage = null;
     let assistantContent = '';
+    let sprites = [];
 
     // Configure marked
     marked.setOptions({
@@ -960,6 +1252,186 @@
 
     // Make deleteSession global for onclick
     window.deleteSession = deleteSession;
+
+    // Sprites management
+    function openSpritesModal() {
+      loadSprites();
+      spritesModal.classList.add('open');
+    }
+
+    function closeSpritesModalFn() {
+      spritesModal.classList.remove('open');
+      spriteNameInput.value = '';
+      spriteAddressInput.value = '';
+    }
+
+    async function loadSprites() {
+      const res = await fetch('/api/sprites');
+      sprites = await res.json();
+      renderSpritesList();
+    }
+
+    function getCurrentSpriteAddress() {
+      // Get current host without port
+      return location.hostname;
+    }
+
+    function renderSpritesList() {
+      const currentAddr = getCurrentSpriteAddress();
+
+      if (sprites.length === 0) {
+        spritesList.innerHTML = '<div class="sprites-empty">No sprites saved yet. Add one below!</div>';
+        return;
+      }
+
+      spritesList.innerHTML = sprites.map(s => {
+        const isCurrent = s.address === currentAddr;
+        return `
+          <div class="sprite-item ${isCurrent ? 'current' : ''}" data-id="${s.id}" data-address="${s.address}" data-port="${s.port}">
+            <div class="sprite-info">
+              <div class="sprite-name">
+                ${escapeHtml(s.name)}
+                ${isCurrent ? '<span class="sprite-current-badge">Current</span>' : ''}
+              </div>
+              <div class="sprite-address">${escapeHtml(s.address)}:${s.port}</div>
+            </div>
+            <button class="sprite-delete" onclick="deleteSprite('${s.id}', event)">×</button>
+          </div>
+        `;
+      }).join('');
+
+      spritesList.querySelectorAll('.sprite-item').forEach(el => {
+        el.addEventListener('click', (e) => {
+          if (e.target.classList.contains('sprite-delete')) return;
+          const address = el.dataset.address;
+          const port = el.dataset.port;
+          navigateToSprite(address, port);
+        });
+      });
+    }
+
+    async function addSprite() {
+      const name = spriteNameInput.value.trim();
+      const address = spriteAddressInput.value.trim();
+
+      if (!name || !address) {
+        alert('Please enter both name and address');
+        return;
+      }
+
+      await fetch('/api/sprites', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ name, address, port: 8080 }),
+      });
+
+      spriteNameInput.value = '';
+      spriteAddressInput.value = '';
+      loadSprites();
+    }
+
+    async function deleteSprite(id, e) {
+      e.stopPropagation();
+      if (!confirm('Delete this sprite?')) return;
+      await fetch(`/api/sprites/${id}`, { method: 'DELETE' });
+      loadSprites();
+    }
+
+    function navigateToSprite(address, port) {
+      const protocol = location.protocol;
+      const url = `${protocol}//${address}:${port}`;
+      window.location.href = url;
+    }
+
+    // Make deleteSprite global for onclick
+    window.deleteSprite = deleteSprite;
+
+    // Sprites modal event listeners
+    settingsBtn.addEventListener('click', openSpritesModal);
+    closeSpritesModal.addEventListener('click', closeSpritesModalFn);
+    spritesModal.addEventListener('click', (e) => {
+      if (e.target === spritesModal) closeSpritesModalFn();
+    });
+    addSpriteBtn.addEventListener('click', addSprite);
+    spriteAddressInput.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') addSprite();
+    });
+
+    // Pull to refresh
+    let pullStartY = 0;
+    let isPulling = false;
+    let pullDistance = 0;
+    const PULL_THRESHOLD = 80;
+
+    function canPullRefresh() {
+      // Only allow pull refresh when at top of scrollable content
+      // and sidebar/modal are closed
+      if (sidebar.classList.contains('open')) return false;
+      if (spritesModal.classList.contains('open')) return false;
+
+      // Check if messages area is at top or we're in empty state
+      if (messagesEl.classList.contains('active')) {
+        return messagesEl.scrollTop <= 0;
+      }
+      return true; // Empty state, always allow
+    }
+
+    document.addEventListener('touchstart', (e) => {
+      if (!canPullRefresh()) return;
+      pullStartY = e.touches[0].clientY;
+      isPulling = true;
+      pullDistance = 0;
+    }, { passive: true });
+
+    document.addEventListener('touchmove', (e) => {
+      if (!isPulling || !canPullRefresh()) return;
+
+      const currentY = e.touches[0].clientY;
+      pullDistance = currentY - pullStartY;
+
+      // Only show indicator when pulling down
+      if (pullDistance > 0) {
+        // Calculate indicator position (max 80px down)
+        const progress = Math.min(pullDistance / PULL_THRESHOLD, 1);
+        const translateY = -60 + (progress * 80);
+
+        pullIndicator.style.transform = `translateX(-50%) translateY(${translateY}px)`;
+        pullIndicator.style.transition = 'none';
+        pullIndicator.classList.add('visible');
+
+        if (pullDistance >= PULL_THRESHOLD) {
+          pullIndicator.classList.add('ready');
+        } else {
+          pullIndicator.classList.remove('ready');
+        }
+      } else {
+        pullIndicator.classList.remove('visible', 'ready');
+      }
+    }, { passive: true });
+
+    document.addEventListener('touchend', () => {
+      if (!isPulling) return;
+      isPulling = false;
+
+      pullIndicator.style.transition = '';
+
+      if (pullDistance >= PULL_THRESHOLD) {
+        // Trigger refresh
+        pullIndicator.classList.remove('ready');
+        pullIndicator.classList.add('refreshing');
+
+        // Small delay for visual feedback, then reload
+        setTimeout(() => {
+          window.location.reload();
+        }, 300);
+      } else {
+        // Reset indicator
+        pullIndicator.classList.remove('visible', 'ready');
+        pullIndicator.style.transform = '';
+      }
+
+      pullDistance = 0;
+    }, { passive: true });
 
     // Init
     loadSessions();
