--- a/public/index.html
+++ b/public/index.html
@@ -149,18 +149,20 @@
     }
 
     .session-delete {
-      width: 28px;
-      height: 28px;
+      width: 36px;
+      height: 36px;
       border: none;
       background: var(--bg-tertiary);
       color: var(--text-muted);
       cursor: pointer;
-      border-radius: 6px;
+      border-radius: 8px;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 18px;
+      font-size: 20px;
       flex-shrink: 0;
+      -webkit-tap-highlight-color: transparent;
+      touch-action: manipulation;
     }
 
     .session-delete:active {
@@ -1088,6 +1090,42 @@
     menuBtn.addEventListener('click', openSidebar);
     overlay.addEventListener('click', closeSidebar);
 
+    // Swipe to close sidebar
+    let sidebarTouchStartX = 0;
+    let sidebarTouchCurrentX = 0;
+    let isSidebarSwiping = false;
+
+    sidebar.addEventListener('touchstart', (e) => {
+      if (!sidebar.classList.contains('open')) return;
+      sidebarTouchStartX = e.touches[0].clientX;
+      sidebarTouchCurrentX = sidebarTouchStartX;
+      isSidebarSwiping = true;
+      sidebar.style.transition = 'none';
+    }, { passive: true });
+
+    sidebar.addEventListener('touchmove', (e) => {
+      if (!isSidebarSwiping) return;
+      sidebarTouchCurrentX = e.touches[0].clientX;
+      const diff = sidebarTouchCurrentX - sidebarTouchStartX;
+      if (diff < 0) {
+        sidebar.style.transform = `translateX(${diff}px)`;
+        overlay.style.opacity = Math.max(0, 1 + diff / 280);
+      }
+    }, { passive: true });
+
+    sidebar.addEventListener('touchend', () => {
+      if (!isSidebarSwiping) return;
+      isSidebarSwiping = false;
+      sidebar.style.transition = '';
+      sidebar.style.transform = '';
+      overlay.style.opacity = '';
+
+      const diff = sidebarTouchCurrentX - sidebarTouchStartX;
+      if (diff < -80) {
+        closeSidebar();
+      }
+    });
+
     // Sessions API
     async function loadSessions() {
       const res = await fetch('/api/sessions');
@@ -1111,7 +1149,8 @@
 
     async function deleteSession(id, e) {
       e.stopPropagation();
-      if (!confirm('Delete this chat?')) return;
+      e.preventDefault();
+
       await fetch(`/api/sessions/${id}`, { method: 'DELETE' });
       sessions = sessions.filter(s => s.id !== id);
       if (currentSession?.id === id) {
