--- a/public/index.html
+++ b/public/index.html
@@ -1235,7 +1235,7 @@
           const controller = new AbortController();
           const timeout = setTimeout(() => controller.abort(), 5000);
 
-          const res = await fetch('/api/config', { signal: controller.signal });
+          const res = await fetch(`/api/config?_t=${Date.now()}`, { signal: controller.signal });
           clearTimeout(timeout);
 
           if (res.ok) {
