Replace Tailscale auth with simple password authentication
- Add password auth middleware to server.ts
- Create lib/auth.ts with session management
- Add login page (public/login.html) and logout button in settings
- Add /api/login, /api/logout, /api/auth/status endpoints
- Update sprite-setup.sh to remove Tailscale steps (6, 7, 10)
- Change default port from 8081 to 8080 (no longer need tailnet-gate)
- Update create-sprite.sh to skip Tailscale auth key transfer

Default password: Demopassword

Committed-By-Agent: claude

--- a/public/index.html
+++ b/public/index.html
@@ -188,8 +188,13 @@
         <div class="sprites-list" id="sprites-list"></div>
         <div class="add-sprite-form">
           <input type="text" id="sprite-name-input" placeholder="Sprite name (e.g., Work Sprite)">
-          <input type="text" id="sprite-address-input" placeholder="Tailscale IP (e.g., 100.64.1.2)">
+          <input type="text" id="sprite-address-input" placeholder="IP address (e.g., 192.168.1.100)">
           <button class="add-sprite-btn" id="add-sprite-btn">Add Sprite</button>
+        </div>
+
+        <!-- Logout section -->
+        <div class="logout-section">
+          <button class="logout-btn" id="logout-btn">Logout</button>
         </div>
       </div>
     </div>
