Rebrand to Vibe-Link
Web UI changes:
- Update login page title from "Sprite Mobile" to "Vibe-Link"
- Update main app title to "Vibe-Link"
- Update PWA manifest name to "Vibe-Link"

CLI tool rebranding:
- Rename CLI tool from "sprite-api" to "vibe-link"
- Update all references in code and documentation
- Update binary name in Makefile
- Update module path in go.mod
- Update all help text and usage examples

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="turbo:native-navigation" content="hidden">
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="/icon-192.png">
-  <title>Sprite Mobile</title>
+  <title>Vibe-Link</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
   <link rel="stylesheet" href="/styles.css?v=2">
 </head>
